Fix navbar overflow when scrolling
[#183274794]

--- a/src/components/layout/navbar.module.less
+++ b/src/components/layout/navbar.module.less
@@ -1,57 +1,27 @@
 @import '~@boclips-ui/styles/src/breakpoints';
 @import '~@boclips-ui/styles/src/colors';
 
-.navbar {
-@apply items-center h-full bg-white;
-  position: sticky;
-  top: 0px;
-  z-index: 50;
-  height: 75px;
-
-  &:after {
-    content: '';
-    width: 100vw;
-    height: 75px;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: -1;
-    background-color: white;
-    box-shadow: 0 2px 8px 0 rgba(0, 21, 80, 0.15);
-  }
-}
-
 .navbarResponsive {
-@apply items-center h-full bg-white;
+  @apply items-center h-full bg-white;
   position: sticky;
   top: 0px;
   z-index: 101;
+  background: @white;
+  box-shadow: 0 2px 8px -2px rgba(0, 21, 80, 0.15);
 
   .logo {
-  @apply col-start-2 col-end-5 row-start-1 row-end-1;
+    @apply col-start-2 col-end-5 row-start-1 row-end-1;
     display: inline-flex;
     z-index: 2;
   }
 
-  &:after {
-    content: '';
-    width: 100vw;
-    height: 121px;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: -1;
-    background-color: white;
-    box-shadow: 0 2px 8px 0 rgba(0, 21, 80, 0.15);
-  }
-
   .buttons {
-  @apply col-start-24 col-end-26 row-start-1 row-end-1 flex justify-end items-center;
+    @apply col-start-24 col-end-26 row-start-1 row-end-1 flex justify-end items-center;
     height: 48px;
   }
 
   .buttonsDesktop {
-  @apply col-start-20 col-end-26 row-start-1 row-end-1 flex h-full justify-end;
+    @apply col-start-20 col-end-26 row-start-1 row-end-1 flex h-full justify-end;
     height: 74px;
   }
 }
@@ -135,9 +105,8 @@
   }
 }
 
-
 @media (min-width: @screen-sm) {
-  .navbarResponsive{
+  .navbarResponsive {
     z-index: 50;
   }
   .logo {
@@ -149,13 +118,8 @@
   .navbarResponsive {
     height: 74px;
 
-    &:after {
-      height: 74px;
-    }
-
     .logo {
       padding: 0;
     }
   }
-
 }
